fix jsonView word wrap

--- a/src/modules/jsonViewer/styles/style.css
+++ b/src/modules/jsonViewer/styles/style.css
@@ -14,10 +14,12 @@
   }
 
   & .value {
+    word-wrap:break-word;
     &.null {
       color: var(--null-color);
     }
     &.string {
+
       color: var(--string-color);
     }
     &.number {
